<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Cube"
        android:layout_width="161.8dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_button_drawable"
        android:onClick="toCube"
        android:text="@string/cube"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CreditCard"
        android:layout_width="161.8dp"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/main_button_drawable"
        android:onClick="toCreditCard"
        android:text="@string/credit_card"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/Cube"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/PushUp"
        android:layout_width="161.8dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_button_drawable"
        android:onClick="toPushUp"
        android:text="@string/push_up"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cube" />

    <Button
        android:id="@+id/KegelExercise"
        android:layout_width="161.8dp"
        android:layout_height="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/main_button_drawable"
        android:onClick="toKegelExercise"
        android:text="@string/kegel_exercise"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/PushUp"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>